force-app/main/default/objects/Bypass__c/Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CGI - FSL : Paramètre personnalisé permettant de bypasser les VR/PB de manière individualisée.</description>
    <label>Bypass</label>
</CustomObject>