force-app/main/default/objects/Bypass__c/fields/ByPass_ProcessDeploiement__c.field-meta.xml
<CustomField>
    <fullName>ByPass_ProcessDeploiement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CGI - FSL : Paramètre personnalisé permettant de bypasser les PB : WO,Gestion cycle de vie,RessourcesAssignees de manière individualisée.</description>
    <label>ByPass_ProcessDeploiement</label>
    <type>Checkbox</type>
</CustomField>