force-app/main/default/objects/Bypass__c/fields/FSL_Bypass_PlanifManuelle__c.field-meta.xml
<CustomField>
    <fullName>FSL_Bypass_PlanifManuelle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CGI - FSL : Bypass permettant de définir l&apos;utilisateur autorisée à faire de la planif manuelle</description>
    <label>Bypass_PlanifManuelle</label>
    <type>Checkbox</type>
</CustomField>