force-app/main/default/objects/Bypass__c/fields/fsl_ByPassProcessTerritoire__c.field-meta.xml
<CustomField>
    <fullName>fsl_ByPassProcessTerritoire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass_ProcessTerritoire</label>
    <type>Checkbox</type>
</CustomField>